[json-lib] fixes for 1613402, 1614278, 1614273, 1614275, 1614276