@@ -152,7 +152,7 @@ public class TestJSONDynaBean extends TestCase
       dynaBean.set( "bi", new BigInteger( "1" ) );
       dynaBean.set( "bd", new BigDecimal( "1" ) );
       dynaBean.set( "boolean", Boolean.TRUE );
-      dynaBean.set( "char", Character.valueOf( 'a' ) );
+      dynaBean.set( "char", new Character( 'a' ) );
 
       assertEquals( Byte.valueOf( "1" ), dynaBean.get( "byte" ) );
       assertEquals( Short.valueOf( "1" ), dynaBean.get( "short" ) );
@@ -163,7 +163,7 @@ public class TestJSONDynaBean extends TestCase
       assertEquals( new BigInteger( "1" ), dynaBean.get( "bi" ) );
       assertEquals( new BigDecimal( "1" ), dynaBean.get( "bd" ) );
       assertEquals( Boolean.TRUE, dynaBean.get( "boolean" ) );
-      assertEquals( Character.valueOf( 'a' ), dynaBean.get( "char" ) );
+      assertEquals( new Character( 'a' ), dynaBean.get( "char" ) );
    }
 
    public void testGetSet_primitives()
@@ -175,7 +175,7 @@ public class TestJSONDynaBean extends TestCase
       primitiveDynaBean.set( "float", Float.valueOf( "1" ) );
       primitiveDynaBean.set( "double", Double.valueOf( "1" ) );
       primitiveDynaBean.set( "boolean", Boolean.TRUE );
-      primitiveDynaBean.set( "char", Character.valueOf( 'a' ) );
+      primitiveDynaBean.set( "char", new Character( 'a' ) );
 
       assertEquals( Byte.valueOf( "1" ), primitiveDynaBean.get( "byte" ) );
       assertEquals( Short.valueOf( "1" ), primitiveDynaBean.get( "short" ) );
@@ -184,7 +184,7 @@ public class TestJSONDynaBean extends TestCase
       assertEquals( Float.valueOf( "1" ), primitiveDynaBean.get( "float" ) );
       assertEquals( Double.valueOf( "1" ), primitiveDynaBean.get( "double" ) );
       assertEquals( Boolean.TRUE, primitiveDynaBean.get( "boolean" ) );
-      assertEquals( Character.valueOf( 'a' ), primitiveDynaBean.get( "char" ) );
+      assertEquals( new Character( 'a' ), primitiveDynaBean.get( "char" ) );
    }
 
    public void testGetSetIndexed_Array()
